--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,51 @@
-node_modules
-# Keep environment variables out of version control
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# React Native
+# Ignore build folders
+android/
+ios/
+build/
+
+# Expo
+.expo/
+.expo-shared/
+
+# Logs
+*.log
+logs/
+*.log.*
+pids/
+*.pid
+*.seed
+
+# Mac OS
+.DS_Store
+
+# Env files
 .env
+.env.local
+.env.*.local
+
+# Misc
+.vscode/
+.idea/
+*.swp
+*.swo
+*.sublime-workspace
+*.sublime-project
+
+# Test coverage
+coverage/
+
+# Typescript
+*.tsbuildinfo
+
+# Buck
+buck-out/
+.buckd/
